--- a/antchain.xyz/templates/index.html
+++ b/antchain.xyz/templates/index.html
@@ -27,7 +27,7 @@
         (function () {
             SOSOBTC('Market').init({
                 id: 'sosobtc_market',
-                others: ['eth_cnbtc', 'ans_yunbi', 'ans_yuanbaohui', 'ans_19800', 'anc_19800'],
+                others: [ 'ans_yunbi', 'ans_yuanbaohui', 'ans_19800', 'ansbtc_bittrex','anc_19800'],
                 btc: ['okcoin', 'coinbase',],
                 row: ['price', 'high', 'low', 'vol'],
                 show_tip: false,
